# keymate

./: LICENSE  README.md  pyproject.toml  requirements.txt
src/ssh_manager/: file_object.py  file_permissions.py  key_options_validator.py  keygen.py  main.py  main_watch.py  ssh_file_event_handler.py
src/ssh_manager/gui/: fonts.py  main_frame.py  root_window.py  widget_config.py
src/ssh_manager/ssh_gui/: key_config.py  key_passphrase_widget.py  key_path_widget.py  key_size_widget.py  key_type_widget.py  main_frame.py  root_window.py  widget_config.py  window.py
src/ssh_manager/ssh_gui/archive/: fonts.py  key_config.py  main_frame.py  root_window.py  widget_config.py
test/: keygen_test.py
